--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-    <h1>Bem-vindo(a) à aula de JS!</h1>
-    <button id="meuBotao">Clique Aqui!</button>
+    <h1>Boa noite,professor!</h1>
+    <button id="meuBotao">Clique!</button>
     <script src="app.js"></script>
 </body>
+
 </html>
